--- a/SecureAccessMng-Web/src/main/resources/static/css/common/style.css
+++ b/SecureAccessMng-Web/src/main/resources/static/css/common/style.css
@@ -38,7 +38,8 @@ html #content { height:100%;}
 
 #footer {
 	height:130px;
-	position: absolute;
+	position: fixed;
+/* 	position: absolute; */
 	bottom: 0;
 	left: 0;
 	right: 0;
