--- a/SecureAccessMng-Web/src/main/resources/static/css/common/record.css
+++ b/SecureAccessMng-Web/src/main/resources/static/css/common/record.css
@@ -392,7 +392,7 @@ table.htable td {
 .margin_l3{margin-left: 20px;}
 .margin_l4{margin-left: 150px;}
 .margin_l5{margin-left: 50px;}
-.margin_l6{height: 40px; margin-top: 10px; margin-bottom: -10px;}
+.margin_l6{height: 40px; margin-top: 10px; }
 .margin_l7{margin-top: 20px; margin-bottom:20px; }
 .margin_l8{margin-left: 60px;}
 .margin_l9{margin-left: 430px;}
