--- a/SecureAccessMng-Web/src/main/resources/static/css/common/style.css
+++ b/SecureAccessMng-Web/src/main/resources/static/css/common/style.css
@@ -37,8 +37,8 @@ html #content { height:100%;}
 #box {padding:250px 0 150px;}
 
 #footer {
-	height:130px;
-	position: fixed;
+	height:100px;
+	/* position: fixed; */
 /* 	position: absolute; */
 	bottom: 0;
 	left: 0;
