--- a/SecureAccessMng-Web/src/main/resources/static/css/common/record.css
+++ b/SecureAccessMng-Web/src/main/resources/static/css/common/record.css
@@ -237,6 +237,17 @@ table.htable td {
 	background-color: #848484;
 }
 
+input.userManagefix{
+  width: 300px;
+  height: 30px;
+  line-height:24px;
+  margin-left:10px;
+  padding: 2px;
+  font-size: 30px;
+  color: red;
+  border: 1px solid #eee;
+  float: left;
+}
 #layout_content_popup_sub table.htable input.userManageInput{
   width: 300px;
   height: 30px;
