--- a/SecureAccessMng-Web/src/main/resources/static/css/common/record.css
+++ b/SecureAccessMng-Web/src/main/resources/static/css/common/record.css
@@ -97,12 +97,12 @@ table.htable {
 	}
 
 table.htable th {
-	background-color:#a6a6a6;
+	background-color:#cfcfcf;
 	line-height: 20px;
 	padding:2px;
 	color:#fff;
 	border-bottom:solid 1px #e6e6e6;
-	width: 65px;
+	width: 45px;
 	}
 	
 table.htable th.nowInfo {
@@ -270,29 +270,37 @@ input.userManagefix{
   background-color: white;
 }
 #layout_content_popup_sub table.htable input.userManageInputNow{
-  width: 115px;
+  width: 133px;
   height: 30px;
   line-height:24px;
   margin-left:1px;
   padding: 2px;
-  font-size: 12px;
+  font-size: 11px;
   color: #1b1b1b;
   border: 1px solid white;
   background-color:white;
   float: left;
 }
 #layout_content_popup_sub table.htable input.userManageInputRev{
-  width: 220px;
+  width: 195px;
   height: 30px;
   line-height:24px;
   margin-left:5px;
   margin-right: 2px;
   padding: 2px;
-  font-size: 14px;
+  font-size: 12px;
   color: #1b1b1b;
   border: 1px solid #eee;
   float: right;
 }
+
+input[name="moblphonNo"]::placeholder {
+	font-size: 12px;
+	}
+input[name="mberName"]::placeholder {
+	font-size: 12px;
+	}
+
 #layout_content_popup_sub table.htable input.userManageInput{
   width: 300px;
   height: 30px;
