--- a/SecureAccessMng-Web/src/main/resources/static/lib/smoothness/jquery-ui-1.10.3.custom.css
+++ b/SecureAccessMng-Web/src/main/resources/static/lib/smoothness/jquery-ui-1.10.3.custom.css
@@ -798,7 +798,7 @@ body .ui-tooltip {
 .ui-widget button {
 	font-family: Verdana,Arial,sans-serif;
 	font-size: 1em;
-	width: 400px;
+	width: 380px;
     height: 30px;
     border-color: #eee;
     float: left;
@@ -812,6 +812,15 @@ body .ui-tooltip {
     margin-left: 1px;
     margin-right: 2px;
     float: right;
+}
+.ui-widget .common_selectMain {
+	font-family: Verdana,Arial,sans-serif;
+	font-size: 11px;
+	width: 350px;
+    height: 30px;
+    border-color: #eee;
+    margin-left: 12px;
+    margin-right: 2px;
 }
 .ui-widget-content {
 	border: 1px solid #aaaaaa;
