--- a/SecureAccessMng-Web/src/main/resources/static/css/common/record.css
+++ b/SecureAccessMng-Web/src/main/resources/static/css/common/record.css
@@ -119,6 +119,12 @@ table.htable th.AccountMain{
 	border-bottom:solid 1px #e6e6e6;
 	width: 20px;
 }
+table.htable th.LogPart{
+	line-height: 20px;
+	padding:2px;
+	border-bottom:solid 1px #e6e6e6;
+	width: 90px;
+}
 
 table.htable th.nowInfo {
 	background-color:white;
@@ -411,13 +417,49 @@ input[name="mberName"]::placeholder {
   border: 1px solid transparent;
   cursor:pointer;
 }
+#layout_content_popup_sub button.eqlistButtonAccount{
+  width: 100px;
+  height: 40px;
+  min-height:40px;
+  padding: 2px;
+  margin: 5px 6px 8px 30px;
+  font-size: 14px;
+  color: #fff;
+  background-color:#263238;
+  border: 1px solid transparent;
+  cursor:pointer;
+}
 
 #layout_content_popup_sub button.userManageButton{
   width: 200px;
   height: 40px;
   min-height:40px;
   padding: 2px;
-  margin: 8px 120px;
+  margin: 5px 6px 8px 30px;
+  font-size: 14px;
+  color: #fff;
+  background-color:#263238;
+  border: 1px solid transparent;
+  cursor:pointer;
+}
+#layout_content_popup_sub button.userManageButtonAddAcount{
+  width: 200px;
+  height: 40px;
+  min-height:40px;
+  padding: 2px;
+  margin: 5px 6px 8px 120px;
+  font-size: 14px;
+  color: #fff;
+  background-color:#263238;
+  border: 1px solid transparent;
+  cursor:pointer;
+}
+#layout_content_popup_sub button.userManageButtonServer{
+  width: 175px;
+  height: 40px;
+  min-height:40px;
+  padding: 2px;
+   margin: 5px 6px 8px 30px;
   font-size: 14px;
   color: #fff;
   background-color:#263238;
