--- a/SecureAccessMng-Web/src/main/resources/static/lib/smoothness/jquery.custom.css
+++ b/SecureAccessMng-Web/src/main/resources/static/lib/smoothness/jquery.custom.css
@@ -11,9 +11,10 @@ div.ui-datepicker{ font-size:13px; }
 /* .SYWORKS_POP_LAYOUT.ui-dialog .ui-dialog-title{margin-left: 17px;padding-left: 24px;color: #fff;font-size: 14px;text-align: left;line-height: 40px;background: url("images2/ico/ico_search_poptit.gif") no-repeat 0 14px;} */
 .SYWORKS_POP_LAYOUT.ui-dialog .ui-dialog-title{margin-left: 17px;padding-left: 24px;color: #fff;font-size: 14px;text-align: left;line-height: 40px;}
 .SYWORKS_POP_LAYOUT.ui-dialog .ui-widget-content{border: none;margin-top: 0px;padding:10px; font-size:13px;}
-.SYWORKS_POP_LAYOUT.ui-dialog .ui-dialog-buttonset {float:none;text-align: center;}
+.SYWORKS_POP_LAYOUT.ui-dialog .ui-dialog-buttonset {float:none;text-align: center; }
 /* .SYWORKS_POP_LAYOUT.ui-dialog .ui-dialog-buttonset .ui-button{ height: 30px; border: none; background: url("images2/btn/btn_lblue.gif") no-repeat ;outline: none;} */
 
+.SYWORKS_POP_LAYOUT.ui-dialog .ui-dialog-buttonset .ui-button .ui-button-text{color: #FFF;background: #A6A6A6;}
 .SYWORKS_POP_LAYOUT.ui-dialog .ui-dialog-buttonset .ui-button .ui-button-text{color: #FFF;background: #A6A6A6;}
 
 .SYWORKS_POP_LAYOUT.ui-dialog .ui-dialog-content .COMMON_ZIP_CODE .idCheckForm_adDesign input { margin-right: 5px; padding: 0 5px; height: 35px; width: 220px;font-size: 14px; border: 1px solid #dbdbdb;}
