220428_CSS 및 기타 변경사항 수정

--- a/SecureAccessMng-Web/src/main/resources/static/css/common/record.css
+++ b/SecureAccessMng-Web/src/main/resources/static/css/common/record.css
@@ -87,7 +87,6 @@ table.wtable_sub td {
 	color:#404040;
 	justify-content: center;
 	heigth: 100px;
-	padding-left: 120px;
 	}
 
 table.htable {
@@ -188,24 +187,22 @@ table.htable td {
 
 #layout_content div.common_div,
 #layout_content_popup div.common_div{
-  width: 100px;
-  height: 40px;
-  font-size: 14px;
+  width: 65px;
+  height: 30px;
+  font-size: 12px;
   color: #1b1b1b;
   background-color:#eee;
-  text-align: center;
   border: 1px solid #ccc;
   border-right:none;
-  padding: 5px 0;
   float: left;
 }
 
 #layout_content input.common_input2,
 #layout_content_popup input.common_input2 {
   width: 140px;
-  height: 40px;
+  height: 30px;
   line-height:24px;
-  font-size: 14px;
+  font-size: 12px;
   color: #1b1b1b;
   border: 1px solid #ccc;
   text-align: center;
@@ -223,6 +220,18 @@ table.htable td {
   padding:5px 0;
   border: 1px solid #ccc;
   text-align: center;
+  float: left;
+}
+#layout_content select.common_select,
+#layout_content_popup select.common_selectLeft{
+  width: 120px;
+  height: 30px;
+  cursor:pointer;
+  font-size: 12px;
+  color: #1b1b1b;
+  padding:5px 0;
+  border: 1px solid #ccc;
+  text-align: left;
   float: left;
 }
 
@@ -251,7 +260,7 @@ table.htable td {
 #layout_content button.common_button2,
 #layout_content_popup button.common_button2{
   width: 100px;
-  height: 40px;
+  height: 30px;
   line-height:24px;
   cursor:pointer;
   font-size: 14px;
@@ -261,6 +270,7 @@ table.htable td {
   border-radius: 4px;
   text-align: center;
   margin-right:30px;
+  float : right;
   behavior: url(/r2pRecordStreaming/static/lib/PIE/PIE.htc);
 }
 
@@ -527,6 +537,7 @@ input[name="mberName"]::placeholder {
 	margin-top: 4px;
 	border-radius: 3px;
 	margin-left : 15px;
+	margin-right: 15px;
 	float: right;
 	behavior: url(/r2pRecordStreaming/static/lib/PIE/PIE.htc);
 	}
